Fix broken collapse of editor

--- a/src/ui/public/collapsible_sidebar/collapsible_sidebar.less
+++ b/src/ui/public/collapsible_sidebar/collapsible_sidebar.less
@@ -13,6 +13,7 @@
   }
 
   &.closed {
+    min-width: 0 !important;
     width: 0 !important;
     border-right-width: 0;
     border-left-width: 0;
